# TestWork7

./: .env.example  langgraph.json  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  agent.py  bot.py  price_list.py  state.py
data/: price_list.csv
